# cips

./: .buildinfo  .gitignore  Makefile  README.md  cip-0001.html  cip-0002.html  cip-0003.html  cip-0004.html  cip-0005.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: pages.yml
_sources/: cip-0001.md.txt  cip-0001.rst.txt  cip-0005.rst.txt  index.rst.txt
cips/: cip-0002.md  cip-0002.rst  cip-0003.md  cip-0003.rst  cip-0004.rst  conf.py  index.rst
