[project]
name = "cips"
description = "Campus Improvement Proposals"
authors = [
    {name = "JS Ng",email = "ngjunsiang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
